--- a/css/contact.css
+++ b/css/contact.css
@@ -48,6 +48,13 @@ h2 {
     padding-bottom: 10px;
     margin-bottom: 10px;
 }
+/*Select with option value */
+select.rb-field {
+    border: 2px solid black;
+    padding: 3%;
+    border-radius: 0px;
+}
+/*Design of form*/
 .rb-field {
     width: 100%;
     font-size: 1.1rem;
@@ -92,11 +99,17 @@ h2 {
         transform: scale(1);
     } 
 }
-/*Only for large devices*/
+/*Only for small devices(phones)*/
 @media only screen and (max-width: 768px){
+     /*To made two parts in one row*/
+     .rb-contact-box {
+        grid-template-columns: 1fr;
+    }
+    /*To show photos with this height, and object fit and position*/
     .rb-left {
         object-fit: cover;
         object-position: center;
+        height: 200px;
     }
    .rb-box:after{
         content: ' ';
@@ -110,29 +123,9 @@ h2 {
         z-index: -1;
         filter: blur(55px);
     }
-}
-/*Only for small devices*/
-@media only screen and (max-width: 375px){
-    /*To made two parts in one row*/
-    .rb-contact-box {
-        grid-template-columns: 1fr;
-    }
-    /*To show photos with this height*/
-    .rb-left {
-        height: 200px;
-    }
-    /*Design after page*/
-   .rb-box:after{
-       content: ' ';
-       position: absolute;
-       left: 0;
-       top: 0;
-       width: 100%;
-       height: 100%;
-       background: url(../fotot/contact.jpg) no-repeat center;
-       background-size: cover;
-       z-index: -1;
-       filter: blur(85px);
+    .rb-btn {
+        width: 30%;
+        font-size: 90%;
     }
 }
   
