--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,7 @@ section::after {
     border-radius: 3%;
 }
 .rb-section-contain h1:hover {
-    color: rgba(236, 202, 48, 0.793);
+    color: rgba(255, 255, 255, 0.801);
     transition: .5s ease;
     transform: rotate(360deg);
 }
@@ -49,27 +49,21 @@ section::after {
     box-shadow: 2px 4px #cf320b;
 }
 @media only screen and (max-width: 768px){
+    section {
+        background-color: rgb(231, 211, 168);
+    }
     .rb-section-contain h1 {
-        color: rgba(233, 37, 11, 0.644);
+        color: rgba(243, 67, 23, 0.644);
         font-weight: 700;
         display: flex;
         justify-content: center;
         align-items: center;
     }
+    .rb-section-contain h1:hover {
+        color: black;
+    }
     .rb-group {
         margin: 70% 10% 50% 10%;
-    }
-    section::after{
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url(../fotot/index-image.jpg);
-        background-size: cover;
-        z-index: -1;
-        filter: blur(530px);
     }
     .rb-section-contain h1:hover {
         transform: rotate(360deg);
