adjusting the navbar , and some changes in all pages

--- a/css/designers.css
+++ b/css/designers.css
@@ -2,6 +2,34 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
+/*Header*/
+.rb-navbar-icon {
+    width: auto;
+    height: 80px;
+}
+.rb-index-menu , .rb-about {
+    text-decoration: none;
+    color: black;
+    margin: 5%;
+}
+.rb-nav-link:hover {
+   background-color: rgb(245, 236, 224);
+   padding: 4%;
+}
+.rb-home-menu, .rb-about-menu {
+    margin-left: -30%
+}
+.col {
+    padding: 3%;
+    margin: -2%;
+    font-size: 16px;
+}
+.rb-nav-item {
+    padding: 3px;
+}
+.dropdown-toggle {
+    margin-left: -55%;
+}
 /*Section*/
 section {
     background-color: rgb(0, 0, 0);
@@ -53,6 +81,10 @@ td span a:hover{
 }
 /*Only for small devices(phones)*/
 @media (max-width: 768px) {
+    /*Header navbar menu*/
+    .rb-home-menu, .rb-about-menu {
+        margin-left: -50%;
+    }
     /*Hide table thead on small devices with display*/
     thead {
        display: none;
@@ -95,5 +127,11 @@ td span a:hover{
     /*Color of job links for better visibility*/
     .rb-job {
         color: black;
+    }
+}
+/*Header for small devices */
+@media only screen and (max-width: 375px){
+    .rb-about-menu, .rb-home-menu {
+        margin-left: -15%;
     }
 }
