--- a/css/about.css
+++ b/css/about.css
@@ -2,11 +2,35 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
-/*Section*/
+/*Header*/
 .rb-navbar-icon {
-    width: 80%;
+    width: auto;
     height: 80px;
 }
+.rb-index-menu , .rb-about {
+    text-decoration: none;
+    color: black;
+    margin: 5%;
+}
+.rb-nav-link:hover {
+   background-color: rgb(245, 236, 224);
+   padding: 4%;
+}
+.rb-home-menu, .rb-about-menu {
+    margin-left: -30%
+}
+.col {
+    padding: 3%;
+    margin: -2%;
+    font-size: 16px;
+}
+.rb-nav-item {
+    padding: 3px;
+}
+.dropdown-toggle {
+    margin-left: -55%;
+}
+/*Section*/
 section {
     padding: 25px 0;
 }
@@ -14,10 +38,10 @@ section {
     padding-top: 10px;
 }
 /*Design for the "about" page*/
-.rb-about {
+.rb-about-section {
     background-color: rgb(81, 123, 151);
 }
-.rb-about img {
+.rb-about-section img {
     height: 30em;
     object-fit: cover;
     background-repeat: no-repeat;
@@ -25,7 +49,7 @@ section {
     border-radius: 25px;
     margin-bottom: 5%;
 }
-.rb-about img:hover {
+.rb-about-section img:hover {
     border: 2px solid rgb(0, 0, 0);
     box-shadow: 5px 5px 5px 5px rgb(29, 51, 54);
 }
@@ -67,4 +91,16 @@ section {
     background-color:rgb(34, 36, 196);
     border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
+}
+@media only screen and (max-width: 768px){
+    /*Header navbar menu*/
+    .rb-home-menu, .rb-about-menu {
+        margin-left: -50%;
+    }
+}
+/*Header for even smaller devices */
+@media only screen and (max-width: 375px){
+    .rb-about-menu, .rb-home-menu {
+        margin-left: -15%;
+    }
 }
