--- a/css/login.css
+++ b/css/login.css
@@ -2,6 +2,34 @@
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
+/*Header*/
+.rb-navbar-icon {
+    width: auto;
+    height: 80px;
+}
+.rb-index-menu , .rb-about {
+    text-decoration: none;
+    color: black;
+    margin: 5%;
+}
+.rb-nav-link:hover {
+   background-color: rgb(245, 236, 224);
+   padding: 4%;
+}
+.rb-home-menu, .rb-about-menu {
+    margin-left: -30%
+}
+.col {
+    padding: 3%;
+    margin: -2%;
+    font-size: 16px;
+}
+.rb-nav-item {
+    padding: 3px;
+}
+.dropdown-toggle {
+    margin-left: -55%;
+}
 /*Section*/
 .rb-login  {
     height: 90vh;
@@ -79,5 +107,18 @@ form .rb-field {
 @media only screen and (min-width: 768px){
     .rb-login {
         height: 100vh;
+    }
+}
+/* Only for small devices(phones) */
+@media only screen and (max-width: 768px){
+    /*Header navbar menu*/
+    .rb-home-menu, .rb-about-menu {
+        margin-left: -50%;
+    }
+}
+/*Header for small devices */
+@media only screen and (max-width: 375px){
+    .rb-about-menu, .rb-home-menu {
+        margin-left: -15%;
     }
 }
