--- a/css/index.css
+++ b/css/index.css
@@ -1,111 +1,155 @@
-*{
-    font-family: 'Open Sans', sans-serif;
+* {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     box-sizing: border-box;
 }
+
 /*Header*/
 .rb-navbar-icon {
     width: auto;
     height: 80px;
 }
-.rb-index-menu , .rb-about {
+
+.rb-index-menu,
+.rb-about {
     text-decoration: none;
     color: black;
     margin: 5%;
 }
+
 .rb-nav-link:hover {
-   background-color: rgb(245, 236, 224);
-   padding: 4%;
+    background-color: rgb(245, 236, 224);
+    padding: 4%;
 }
-.rb-home-menu, .rb-about-menu {
+
+.rb-home-menu,
+.rb-about-menu {
     margin-left: -30%
 }
+
 .col {
     padding: 3%;
     margin: -2%;
     font-size: 16px;
 }
+
 .rb-nav-item {
     padding: 3px;
 }
+
 .dropdown-toggle {
     margin-left: -55%;
 }
+
 /*Section*/
-section::after {
+.rb-section-contain {
+    position: relative;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: url(../fotot/index-image.jpg) no-repeat center center/cover;
+}
+
+.rb-section-contain::after {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../fotot/index-image.jpg);
-    background-size: cover;
     z-index: -1;
-    filter: blur(50px);
 }
-.rb-section-contain .rb-btn h1  {
-    color: rgb(0, 0, 0);
-    height: 60vh;
+
+.rb-section-contain h1 {
+    color: #fcfffa;
+    font-weight: 200;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .rb-group {
     text-align: center;
-    margin: 50% 10%;
+    margin: 20% 10%;
 }
+
 .rb-btn:hover {
-    box-shadow: 2px 5px #a08018;
+    box-shadow: 5px 7px #3c2d2d;
 }
+
 .rb-btn a {
     color: white;
     text-decoration: none;
 }
-.rb-section-contain img {
-    object-fit: cover;
-    object-position: center;
-    height: 50vh;
-    margin: 25% 8% 25% 5%;
-    width: 90%;
-    border-radius: 3%;
-}
+
 .rb-section-contain h1:hover {
-    color: rgba(255, 255, 255, 0.801);
     transition: .5s ease;
     transform: rotate(360deg);
 }
-.rb-section-contain img:hover {
-    border: 3px solid rgb(1, 20, 43);
-    border-radius: 15%;
-    box-shadow: 2px 4px #cf320b;
+
+/*Footer*/
+.social-icons-wrapper .fab {
+    font-size: 17px;
+    color: rgb(244, 229, 229);
+    transition: all 0.5s ease;
+    display: inline;
 }
+
+.social-icons-wrapper a {
+    text-decoration: none;
+}
+
+.social-icons-wrapper .fa-facebook:hover {
+    color: #0f2cd0;
+}
+
+.social-icons-wrapper .fa-instagram:hover {
+    color: rgb(187, 15, 92);
+}
+
+.social-icons-wrapper .fa-github:hover {
+    color: rgb(0, 9, 9);
+    background-color: rgb(255, 255, 255);
+}
+
 /* Only for small devices(phones) */
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 768px) {
+
     /*Header navbar menu*/
-    .rb-home-menu, .rb-about-menu {
+    .rb-home-menu,
+    .rb-about-menu {
         margin-left: -50%;
     }
+
     /*Section*/
-    section {
-        background-color: rgb(231, 211, 168);
-    }
     .rb-section-contain h1 {
-        color: rgba(243, 67, 23, 0.644);
-        font-weight: 700;
+        color: #fcfffa;
+        font-weight: 200;
         display: flex;
         justify-content: center;
         align-items: center;
     }
+
     .rb-section-contain h1:hover {
         color: black;
+        background-color: aliceblue;
+        border-radius: 100%;
     }
+
     .rb-group {
         margin: 70% 10% 50% 10%;
     }
+
     .rb-section-contain h1:hover {
         transform: rotate(360deg);
     }
 }
+
 /*Header for small devices */
-@media only screen and (max-width: 375px){
-    .rb-about-menu, .rb-home-menu {
+@media only screen and (max-width: 375px) {
+
+    .rb-about-menu,
+    .rb-home-menu {
         margin-left: -20%;
     }
 }
