--- a/css/contact.css
+++ b/css/contact.css
@@ -1,35 +1,45 @@
 * {
     box-sizing: border-box;
-    font-family: 'Open Sans',sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
+
 /*Header*/
 .rb-navbar-icon {
     width: auto;
     height: 80px;
 }
-.rb-index-menu , .rb-about {
+
+.rb-index-menu,
+.rb-about {
     text-decoration: none;
     color: black;
     margin: 5%;
 }
+
 .rb-nav-link:hover {
-   background-color: rgb(245, 236, 224);
-   padding: 4%;
+    background-color: rgb(245, 236, 224);
+    padding: 4%;
 }
-.rb-home-menu, .rb-about-menu {
+
+.rb-home-menu,
+.rb-about-menu {
     margin-left: -30%
 }
+
 .col {
     padding: 3%;
     margin: -2%;
     font-size: 16px;
 }
+
 .rb-nav-item {
     padding: 3px;
 }
+
 .dropdown-toggle {
     margin-left: -55%;
 }
+
 /*Section*/
 .rb-box {
     position: relative;
@@ -40,8 +50,9 @@
     height: 100%;
     padding: 8% 4%;
 }
+
 /*Design after the page*/
-.rb-box:after{
+.rb-box:after {
     content: ' ';
     position: absolute;
     left: 0;
@@ -53,35 +64,41 @@
     z-index: -1;
     filter: blur(35px);
 }
+
 .rb-contact-box {
     max-width: 850px;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     justify-content: center;
     align-items: center;
     text-align: center;
     background-color: white;
     border-radius: 20%;
 }
+
 .rb-left {
     height: 100%;
     background: url("../fotot/contact.jpg") no-repeat center;
     background-size: cover;
 }
+
 .rb-right {
     padding: 20px 40px;
 }
+
 h2 {
     position: relative;
     padding-bottom: 10px;
     margin-bottom: 10px;
 }
+
 /*Select with option value */
 select.rb-field {
     border: 2px solid black;
     padding: 3%;
     border-radius: 0px;
 }
+
 /*Design of form*/
 .rb-field {
     width: 100%;
@@ -91,14 +108,17 @@ select.rb-field {
     padding: 2%;
     transition: .4s;
 }
+
 .rb-field:hover {
     background-color: rgb(242, 190, 190);
     color: white;
 }
+
 .rb-field:focus {
     background-color: rgb(145, 213, 158);
     color: rgb(0, 0, 0);
 }
+
 /*Button*/
 .rb-btn {
     color: white;
@@ -107,43 +127,80 @@ select.rb-field {
     box-shadow: 2px 3px rgb(11, 144, 9);
     border-radius: 40%;
 }
+
 .rb-btn:hover {
-   background-color: rgb(0, 0, 0); 
-   color: rgb(239, 239, 239);
-   animation: beat .5s infinite;
+    background-color: rgb(0, 0, 0);
+    color: rgb(239, 239, 239);
+    animation: beat .5s infinite;
 }
+
 /*Animation according to the rendering rate called 'beat'*/
 @keyframes beat {
     0% {
         transform: scale(.5);
     }
+
     50% {
         transform: scale(.6);
     }
+
     70% {
         transform: scale(.7);
     }
+
     100% {
         transform: scale(1);
-    } 
+    }
 }
+
+/*Footer*/
+.social-icons-wrapper .fab {
+    font-size: 19px;
+    margin: 4px;
+    color: rgb(244, 229, 229);
+    transition: all 0.5s ease;
+    display: inline;
+}
+
+.social-icons-wrapper a {
+    text-decoration: none;
+}
+
+.social-icons-wrapper .fa-facebook:hover {
+    color: #0f2cd0;
+}
+
+.social-icons-wrapper .fa-instagram:hover {
+    color: rgb(187, 15, 92);
+}
+
+.social-icons-wrapper .fa-github:hover {
+    color: rgb(0, 9, 9);
+    background-color: rgb(255, 255, 255);
+}
+
 /*Only for small devices(phones)*/
-@media only screen and (max-width: 768px){
-     /*Header navbar menu*/
-     .rb-home-menu, .rb-about-menu {
+@media only screen and (max-width: 768px) {
+
+    /*Header navbar menu*/
+    .rb-home-menu,
+    .rb-about-menu {
         margin-left: -50%;
     }
-     /*To made two parts in one row*/
-     .rb-contact-box {
+
+    /*To made two parts in one row*/
+    .rb-contact-box {
         grid-template-columns: 1fr;
     }
+
     /*To show photos with this height, and object fit and position*/
     .rb-left {
         object-fit: cover;
         object-position: center;
         height: 200px;
     }
-   .rb-box:after{
+
+    .rb-box:after {
         content: ' ';
         position: absolute;
         left: 0;
@@ -155,15 +212,18 @@ select.rb-field {
         z-index: -1;
         filter: blur(55px);
     }
+
     .rb-btn {
         width: 30%;
         font-size: 90%;
     }
 }
+
 /*Header for small devices */
-@media only screen and (max-width: 375px){
-    .rb-about-menu, .rb-home-menu {
+@media only screen and (max-width: 375px) {
+
+    .rb-about-menu,
+    .rb-home-menu {
         margin-left: -15%;
     }
 }
-  
