--- a/css/history.css
+++ b/css/history.css
@@ -1,53 +1,66 @@
 * {
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
-} 
+}
+
 /*Header*/
 .rb-navbar-icon {
     width: auto;
     height: 80px;
 }
-.rb-index-menu , .rb-about {
+
+.rb-index-menu,
+.rb-about {
     text-decoration: none;
     color: black;
     margin: 5%;
 }
+
 .rb-nav-link:hover {
-   background-color: rgb(245, 236, 224);
-   padding: 4%;
+    background-color: rgb(245, 236, 224);
+    padding: 4%;
 }
-.rb-home-menu, .rb-about-menu {
+
+.rb-home-menu,
+.rb-about-menu {
     margin-left: -30%
 }
+
 .col {
     padding: 3%;
     margin: -2%;
     font-size: 16px;
 }
+
 .rb-nav-item {
     padding: 3px;
 }
+
 .dropdown-toggle {
     margin-left: -55%;
 }
+
 /*Section switch checkbox */
 .rb-section-history {
     background-color: #dfe0dc;
 }
+
 .rb-switch {
-   position: relative;
-   display: inline-block;
-   width: 6%;
-   height: 15%;
-   margin: 4%;
-   margin-left: 47%;
-   text-align: center;
+    position: relative;
+    display: inline-block;
+    width: 6%;
+    height: 15%;
+    margin: 4%;
+    margin-left: 47%;
+    text-align: center;
 }
+
 .rb-switch #rb-checkbox {
     opacity: 0;
     width: 0;
     height: 0;
 }
+
 .rb-slider {
     position: absolute;
     cursor: pointer;
@@ -59,6 +72,7 @@
     transition: .4s;
     border-radius: 20%;
 }
+
 .rb-slider::before {
     position: absolute;
     content: "";
@@ -70,137 +84,196 @@
     border-radius: 100%;
     transition: .4s;
 }
-#rb-checkbox:checked + .rb-slider {
+
+#rb-checkbox:checked+.rb-slider {
     background-color: rgb(138, 143, 137);
 }
-#rb-checkbox:checked + .rb-slider:before {
+
+#rb-checkbox:checked+.rb-slider:before {
     transform: translateX(50px);
 }
+
 /*Design of cards*/
 .rb-section-history {
     background-color: #e2eecf;
 }
+
 .rb-text {
     width: 100%;
 }
+
 .rb-heading-text {
     text-align: center;
     margin: 2% 0% 2% 0%;
 }
+
 .rb-card-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
+
 .rb-card {
     background-color: rgb(79, 206, 92);
     border-radius: 15px;
     width: 325px;
-    margin:15px;
+    margin: 15px;
     box-shadow: 8px 5px rgb(34, 48, 34);
 }
+
 .rb-card:hover {
     cursor: pointer;
-    transform: translateY(-10px); 
+    transform: translateY(-10px);
     transition: all ease 0.5s;
 }
+
 .rb-card img {
     width: 100%;
     height: auto;
     border-radius: 8px;
 }
+
 .rb-card-content {
     padding: 16px;
     text-align: center;
 }
+
 .rb-card-content h3 {
     font-size: 28px;
     font-weight: 700;
     text-transform: uppercase;
 }
+
 .rb-card-content p {
     color: rgb(1, 1, 52);
     text-align: justify;
 }
+
 .rb-card-content button:hover {
     transform: rotate(360deg);
     background-color: rgb(49, 144, 8);
     color: black;
     transition: .5s ease;
 }
+
 .rb-card-content:hover {
     color: red;
     background-color: rgb(184, 250, 184);
 }
+
 button a {
-    text-decoration:none;
+    text-decoration: none;
     color: white;
 }
+
+/*Footer*/
+.social-icons-wrapper .fab {
+    font-size: 19px;
+    margin: 4px;
+    color: rgb(244, 229, 229);
+    transition: all 0.5s ease;
+    display: inline;
+}
+
+.social-icons-wrapper a {
+    text-decoration: none;
+}
+
+.social-icons-wrapper .fa-facebook:hover {
+    color: #0f2cd0;
+}
+
+.social-icons-wrapper .fa-instagram:hover {
+    color: rgb(187, 15, 92);
+}
+
+.social-icons-wrapper .fa-github:hover {
+    color: rgb(0, 9, 9);
+    background-color: rgb(255, 255, 255);
+}
+
 /*Only for large devices*/
-@media only screen and (max-width: 1440px){
-    #rb-checkbox:checked + .rb-slider:before {
+@media only screen and (max-width: 1440px) {
+    #rb-checkbox:checked+.rb-slider:before {
         transform: translateX(47px);
     }
 }
-@media only screen and (max-width: 1024px){
-    #rb-checkbox:checked + .rb-slider:before {
+
+@media only screen and (max-width: 1024px) {
+    #rb-checkbox:checked+.rb-slider:before {
         transform: translateX(35px);
     }
 }
+
 /*Only for small devices(phones)*/
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 768px) {
+
     /*Header navbar menu*/
-    .rb-home-menu, .rb-about-menu {
+    .rb-home-menu,
+    .rb-about-menu {
         margin-left: -50%;
     }
+
     .rb-switch {
         width: 8%;
         padding: 2%;
         margin-left: 47%;
     }
+
     .rb-slider::before {
         left: 3px;
         bottom: 7px;
     }
-    #rb-checkbox:checked + .rb-slider:before {
+
+    #rb-checkbox:checked+.rb-slider:before {
         transform: translate(37px);
     }
 }
-@media only screen and (max-width: 567px){
+
+@media only screen and (max-width: 567px) {
     .rb-switch {
         width: 10%;
         padding: 2%;
         margin-left: 44%;
     }
+
     .rb-slider::before {
         left: 3px;
         bottom: 5px;
     }
-    #rb-checkbox:checked + .rb-slider:before {
+
+    #rb-checkbox:checked+.rb-slider:before {
         transform: translateX(30px);
     }
 }
-@media only screen and (max-width: 430px){
-    #rb-checkbox:checked + .rb-slider:before {
+
+@media only screen and (max-width: 430px) {
+    #rb-checkbox:checked+.rb-slider:before {
         transform: translateX(25px);
     }
 }
-@media only screen and (max-width: 375px){
+
+@media only screen and (max-width: 375px) {
+
     /*Header*/
-    .rb-about-menu, .rb-home-menu {
+    .rb-about-menu,
+    .rb-home-menu {
         margin-left: -15%;
     }
+
     /*Section about button on/off*/
     .rb-switch {
         width: 12%;
         padding: 2%;
         margin-left: 44%;
     }
+
     .rb-slider::before {
         left: 2px;
         bottom: 4px;
     }
-    #rb-checkbox:checked + .rb-slider:before {
+
+    #rb-checkbox:checked+.rb-slider:before {
         transform: translateX(25px);
     }
 }
