--- a/css/index.css
+++ b/css/index.css
@@ -89,7 +89,8 @@
 
 /*Footer*/
 .social-icons-wrapper .fab {
-    font-size: 17px;
+    font-size: 19px;
+    margin: 4px;
     color: rgb(244, 229, 229);
     transition: all 0.5s ease;
     display: inline;
