--- a/css/login.css
+++ b/css/login.css
@@ -44,7 +44,7 @@
 .rb-login {
     height: 90vh;
     width: 100%;
-    background-color: #a3dde6;
+    background-color: #eff5f8;
     display: flex;
     align-items: center;
     justify-content: center;
